Split owner hotel changes into feature/owner-hotel-crud